--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ Description: More about what it does (maybe more than one line).
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/sreyasas95/linregpkg
+BugReports: https://github.com/sreyasas95/linregpkg/issues
